<resources>
    <string name="app_name">Life Log</string>
    <string name="cd_button_add">Button Add</string>
    <string name="bottom_nav_life_log">Life Log</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="bottom_nav_favorite">Favorite</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_favorite">Favorite</string>

    <!-- Dashboard Fragment-->
    <string name="cd_illust_dashboard_empty">You haven\'t any written any note illustration</string>
    <string name="msg_dashboard_empty">You haven\'t written any note.</string>
    <string name="btn_dashboard_empty">Write new note</string>

    <!-- Calendar Fragment -->
    <string name="cd_illust_calendar_empty">Not found note on this date illustration</string>
    <string name="msg_calendar_empty">You haven’t written any note on this date.</string>

    <!-- Favorite Fragment -->
    <string name="cd_illust_favorite_empty">Not found any favorite note ilustration</string>
    <string name="msg_fav_empty">You haven\'t favorite any note.</string>
    <string name="btn_fav_empty">Go to dashboard</string>
    <string name="cd_illust_list_note">Happy Icon</string>

    <!--Read Mode-->
    <string name="cd_btn_back">Button back</string>
    <string name="cd_btn_delete">Button delete</string>
    <string name="cd_btn_edit">Button edit</string>
    <string name="cd_btn_add_fav">Button add to favorite</string>
    <string name="read_mode">Read Mode</string>
    <string name="show_edit_date">Edit-%1$d at %2$s - %3$s</string>
    <string name="tags">Tags</string>

    <!--Edit Mode-->
    <string name="cd_close_pop_up">Close Delete Pop Up</string>
    <string name="cd_close_write">Close Write Pop Up</string>
    <string name="cd_done_edit">Save icon</string>
    <string name="hint_title">What happen today?</string>
    <string name="hint_desc">Describe your activities for better log.</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="toast_msg_empty_note">Cannot save empty note</string>
    <string name="toast_msg_empty_title">Fill the note title before save</string>

    <!--Delete Pop Up-->
    <string name="title_del_popup">Delete Note?</string>
    <string name="desc_del_popup">Are you sure want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Save Dialog Pop Up-->
    <string name="cd_close_dialog_save">Icon close dialog save</string>
    <string name="popup_save_title">Save New Note?</string>
    <string name="popup_update_title">Update Note?</string>
    <string name="text_save_feel">How do you feel about this note?</string>
    <string name="text_save_tag">Give some tag to your notes</string>
    <string name="hint_tag">Example: school, him, her (optional)</string>
    <string name="hint_comments">Example: correct typo</string>
    <string name="text_save_update_comment">Give comments about this update</string>
    <string name="save">Save</string>
    <string name="cd_ic_mood_sad">Icon sad red</string>
    <string name="cd_ic_mood_happy">Icon happy green</string>
    <string name="cd_ic_mood_neutral">Icon mood neutral</string>

    <!--Splash and Onboarding-->
    <string name="cd_app_logo">Application Logo</string>

    <string name="text_ob1_title">Write Daily Log</string>
    <string name="text_ob1_desc">Write your activity everyday, then \nread it later as a good memories.</string>
    <string name="cd_illust_ob1">Write illustration</string>

    <string name="cd_ob3_illlust">Reading illustration</string>
    <string name="text_ob3_title">Trace Activity</string>
    <string name="text_ob3_desc">By writing your activities, you can \ntrace your best memories.</string>

    <string name="cd_ob_2_illust">Fun Illustration</string>
    <string name="text_ob2_title">Fun Emoji</string>
    <string name="text_ob2_desc">Use fun emoji to describe your \nfeeling on your daily notes.</string>

    <!--Cancel Pop Up-->
    <string name="cd_ic_close_cancel_dialog">Icon close cancel dialog</string>
    <string name="popup_cancel_title">Cancel Edit?</string>
    <string name="popup_cancel_desc">Are you sure won’t save this note?</string>
    <string name="popup_btn_confirm">Don\'t Save This</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_get_started">Get Started</string>


    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="notification_title">Hi! How are you today?</string>
    <string name="notification_message">Write your daily activities here!</string>
    <string name="reminder_turned_off">Reminder has turned off</string>
    <string name="reminder_turned_on">"Reminder has activated at %1$s"</string>
    <string name="about_app">About Application</string>
    <string name="text_app_version">App Version : %1$s</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="text_email" translatable="false">fakhrymubarak@gmail.com</string>

</resources>