<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluePrimary500"
    tools:context=".ui.activities.edit.AddUpdateActivity">

    <ImageButton
        android:id="@+id/btn_cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_close_write"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save_edit"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_edit"
        app:layout_constraintTop_toTopOf="@+id/btn_save_edit"
        app:srcCompat="@drawable/ic_close_24px_white" />

    <ImageButton
        android:id="@+id/btn_save_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_done_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_checkmark_24px_white" />

    <EditText
        android:id="@+id/tv_edit_title"
        style="@style/TitlePlayfair.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_title"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="4"
        android:textAlignment="center"
        android:textColorHint="@color/white50"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_edit" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bg_rounded"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/bluePrimary500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_title">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rectangle_background_white"
            android:scrollbarStyle="insideOverlay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="500dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/tv_timestamp_add"
                    style="@style/TextStyles.RalewayRegular.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray500"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Thursday, 20 January 2020, 23:20 " />

                <EditText
                    android:id="@+id/tv_add_description"
                    style="@style/TextStyles.RalewayRegular.Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_desc"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lineSpacingMultiplier="1.5"
                    android:paddingBottom="100dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray500"
                    android:textCursorDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_timestamp_add" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        style="@style/TextStyles.RalewayBold.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/edit_mode"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_save_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>